--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Kia Ora!
+        </title>
+    </head>
+    <body>
+        <h1>
+            Kia Ora!
+        </h1>
+    </body>
+</html>
